newletter worker and mailer, fix batch actions localization

--- a/config/settings.yml
+++ b/config/settings.yml
@@ -10,3 +10,6 @@ shop:
   feedback:
     to: 'test@shop.ru'
     subject: Default Subject
+    from: 'shop@shop.ru'
+  newletter:
+    subject: Default subject
