--- a/config/settings.yml
+++ b/config/settings.yml
@@ -27,11 +27,10 @@ shop:
     timetable: 'Мы работаем по будням с 10-00 до 18-00'
     host: sterep-shop.ru
   feedback:
-    to: 'test@shop.ru'
-    subject: Default Subject
-    from: 'shop@shop.ru'
+    to: 'post@artelectronics.ru'
+    subject: Обратная связь
   newletter:
-    subject: Default subject
+    subject: Новостная рассылка
   order:
     admins: 'post@artelectronics.ru, farid@artelectronics.ru, yana@artelectronics.ru'
     subject:
