--- a/config/settings/development.yml
+++ b/config/settings/development.yml
@@ -1,2 +1,9 @@
 redis:
   port: 6379
+
+yandex_cashbox:
+  mode: :test
+  scid: 63048
+  shop_id: 42821
+  payment_type: AC
+  production_ips: ['77.75.157.166', '77.75.157.170']
