--- a/config/settings/staging.yml
+++ b/config/settings/staging.yml
@@ -1,2 +1,8 @@
 redis:
   port: 6400
+
+yandex_cashbox:
+  mode: :test
+  scid: 63048
+  shop_id: 42821
+  production_ips: ['77.75.157.168', '77.75.157.169', '77.75.159.166', '77.75.159.170']
