--- a/config/settings/production.yml
+++ b/config/settings/production.yml
@@ -3,4 +3,5 @@ redis:
 
 yandex_cashbox:
   mode: :production
+  scid: 29276
   production_ips: ['77.75.157.168', '77.75.157.169', '77.75.159.166', '77.75.159.170', '77.75.156.122', '77.75.157.166']
