--- a/config/settings/staging.yml
+++ b/config/settings/staging.yml
@@ -2,7 +2,7 @@ redis:
   port: 6400
 
 yandex_cashbox:
-  mode: :test
-  scid: 63048
+  mode: :production
+  scid: 29276
   shop_id: 42821
   production_ips: ['77.75.157.168', '77.75.157.169', '77.75.159.166', '77.75.159.170', '77.75.156.122', '77.75.157.166']
