--- a/config/newrelic.yml
+++ b/config/newrelic.yml
@@ -35,6 +35,7 @@ development:
   # NOTE: There is substantial overhead when running in developer mode.
   # Do not use for production or load testing.
   developer_mode: true
+  monitor_mode: false
 
 test:
   <<: *default_settings
@@ -43,6 +44,7 @@ test:
 
 staging:
   <<: *default_settings
+  monitor_mode: false
   app_name: StereoShop (Staging)
 
 production:
