feature Generate sitemap.xml.gz

--- a/.gitignore
+++ b/.gitignore
@@ -14,7 +14,8 @@
 public/system/uploads/
 public/system/dragonfly/
 public/uploads/
-/public/assets
+public/assets
+public/sitemap.xml.gz
 icon-*.png
 
 config/database.yml
