--- a/.gitignore
+++ b/.gitignore
@@ -32,3 +32,7 @@ db/structure.sql
 config/settings.local.yml
 config/settings/*.local.yml
 config/environments/*.local.yml
+
+# Bower files
+/vendor/assets/bower_components
+.bowerrc
