fix some bugs with making order in one click [ci skip]

--- a/config/i18n-js.yml
+++ b/config/i18n-js.yml
@@ -1,3 +1,5 @@
+fallbacks: false
+
 translations:
-  - file: "app/assets/javascripts/i18n/translations.js"
+  - file: 'app/assets/javascripts/i18n/translations.js'
     pretty_print: true
